syntax = "proto3";

option csharp_namespace = "Swisschain.Exchange.Accounts.Contract";

package com.swisschain.dictionaries.grpc;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service WalletsGrpc {
    rpc GetAll (GetAllWalletsByIdsRequest) returns (GetWalletsResponse);
}

message GetAllWalletsByIdsRequest {
    repeated int64 ids = 1;
    string brokerId = 2;
}

message GetWalletsResponse {
    repeated Wallet wallets = 1;
}

message Wallet {
    int64 id = 1;
    string brokerId = 2;
    int64 accountId = 3;
    string name = 4;
    WalletType type = 5;
    bool is_enabled = 6;
    google.protobuf.Timestamp created = 7;
    google.protobuf.Timestamp modified = 8;
}

enum WalletType {
    NONE = 0;
    FUNDING = 1;
    TRADING = 2;
    API = 3;
    HFT = 4;
}